# BaseImageProcessingApplication

./: .gitignore  CMakeLists.txt
Application/: Application.h  CMakeLists.txt  main.cpp
